--- a/analysis/001_overview.Rmd
+++ b/analysis/001_overview.Rmd
@@ -134,15 +134,29 @@ oa_ta_plot_df <- ta_df |>
   filter(!cr_year %in%  c("2017", "2023")) |>
   inner_join(year_all)
   # plot
-oa_ta_plot <- ggplot(oa_ta_plot_df, aes(cr_year, value / n, fill = type, group = type)) +
-  geom_area(color = "white",
-            alpha = 0.8,
-            linewidth = 0.3) +
-  scale_fill_manual(NULL, values = c(no_ta = "#b3b3b3", ta_oa = "#56B4E9"), labels = c(no_ta = "Other", ta_oa = "Agreement"),  guide = guide_legend(reverse = TRUE)) +
-  scale_y_continuous(expand = expansion(mult = c(0, 0.05)), labels = scales::percent_format(), limits = c(0, .15), breaks = c(0, .05, .1, .15)) +
+oa_ta_plot <-
+  ggplot(oa_ta_plot_df, aes(cr_year, value / n, fill = type, group = type)) +
+  geom_area(color = "#000000",
+            linewidth = 0.15) +
+  scale_fill_manual(
+    NULL,
+    values = c(no_ta = "#b3b3b3a0", ta_oa = "#56B4E9"),
+    labels = c(no_ta = "Other", ta_oa = "Agreement"),
+    guide = guide_legend(reverse = TRUE)
+  ) +
+  scale_y_continuous(
+    expand = expansion(mult = c(0, 0.05)),
+    labels = scales::percent_format(),
+    limits = c(0, .15),
+    breaks = c(0, .05, .1, .15)
+  ) +
   theme_minimal() +
   labs(y = "Hybrid OA Uptake", x = NULL) +
-  theme(legend.position="top", legend.justification = "left", axis.text.x = element_blank())
+  theme(
+    legend.position = "top",
+    legend.justification = "left",
+    axis.text.x = element_blank()
+  )
 ```
 
 ```{r ta_share_plot}
@@ -151,7 +165,7 @@ ta_share_plot <- ta_df |>
   pivot_longer(cols = c(ta_oa_prop, no_ta_prop), names_to = "type", values_to = "value") |>
   filter(!cr_year %in%  c("2017", "2023"), type == "ta_oa_prop") |>
   ggplot(aes(gsub("^20", "'", as.character(cr_year)), value, group = 1)) +
-  geom_bar(stat = "identity", fill = "#56B4E9") +
+  geom_bar(stat = "identity", fill = "#56B4E9", color = "#000000", linewidth = 0.15) +
   scale_y_continuous(expand = expansion(mult = c(0, 0.05)), breaks = c(0, 0.25, 0.5),
                      labels = scales::percent) +
   theme_minimal() +
@@ -219,8 +233,6 @@ box_ta_prop <- summary_all |>
   scale_fill_manual(NULL, values = c(prop_no_ta = "#b3b3b3a0", prop_ta_oa = "#56B4E9"), labels = c(prop_no_ta = "Other", prop_ta_oa = "Agreement"), guide = FALSE) +
   theme_minimal() +
   labs(y = NULL, x = "Publication Year")
-  
-
 ```
 
 ```{r}
@@ -350,45 +362,75 @@ publisher_summary_df <- inner_join(oa_publisher, all_publisher) |>
   mutate(prop = value / jn_all)
 
 
-publisher_prop <- ggplot(publisher_summary_df, aes(gsub("^20", "'", as.character(cr_year)), prop, fill = type, group = type)) +
-    geom_area(color = "white",
-            alpha = 0.8,
-            linewidth = 0.3) +
-  facet_wrap(~publisher, nrow = 1) +
-  scale_fill_manual("Hybrid OA", values = c(no_ta = "#b3b3b3", ta_oa = "#56B4E9"), labels = c(no_ta = "Other", ta_oa = "Agreement"),  guide = guide_legend(reverse = TRUE)) +
-  scale_y_continuous(expand = expansion(mult = c(0, 0.05)), labels = scales::percent_format(),
-                     breaks = c(0.05, 0.1, 0.15, 0.2, 0.25)) +
+publisher_prop <-
+  ggplot(publisher_summary_df, aes(
+    gsub("^20", "'", as.character(cr_year)),
+    prop,
+    fill = type,
+    group = type
+  )) +
+  geom_area(color = "#000000",
+            linewidth = 0.15) +
+  facet_wrap( ~ publisher, nrow = 1) +
+  scale_fill_manual(
+    "Hybrid OA",
+    values = c(no_ta = "#b3b3b3a0", ta_oa = "#56B4E9"),
+    labels = c(no_ta = "Other", ta_oa = "Agreement"),
+    guide = guide_legend(reverse = TRUE)
+  ) +
+  scale_y_continuous(
+    expand = expansion(mult = c(0, 0.05)),
+    labels = scales::percent_format(),
+    breaks = c(0.05, 0.1, 0.15, 0.2, 0.25)
+  ) +
   theme_minimal() +
   labs(y = "Hybrid OA Uptake", x = NULL) +
-  theme(legend.position="top", legend.justification = "left", axis.text.x = element_blank())
+  theme(
+    legend.position = "top",
+    legend.justification = "left",
+    axis.text.x = element_blank()
+  )
 
 publisher_boxplot <- publisher_plot_df |>
   filter(value > 0) |>
   ggplot(aes(gsub("^20", "'", as.character(cr_year)), value / jn_all, fill = type)) +
-  geom_boxplot(outlier.shape = NA, show.legend = FALSE, varwidth = TRUE) +
+  geom_boxplot(outlier.shape = NA,
+               show.legend = FALSE,
+               varwidth = TRUE) +
   scale_y_continuous(expand = expansion(mult = c(0, 0.05)),
                      labels = scales::percent) +
-  scale_fill_manual("Hybrid OA", values = c(no_ta = "#b3b3b3a0", ta_oa = "#56B4E9"), labels = c(no_ta = "Other", ta_oa = "Agreement")) +
-  coord_cartesian(ylim = c(0,0.65)) +
-  facet_wrap(~publisher, nrow = 1) +
+  scale_fill_manual(
+    "Hybrid OA",
+    values = c(no_ta = "#b3b3b3a0", ta_oa = "#56B4E9"),
+    labels = c(no_ta = "Other", ta_oa = "Agreement")
+  ) +
+  coord_cartesian(ylim = c(0, 0.65)) +
+  facet_wrap( ~ publisher, nrow = 1) +
   labs(y = "OA Uptake\nby Hybrid Journal", x = "Publication Year") +
   theme_minimal() +
-    theme(strip.background = element_blank(),
-    strip.text.x = element_blank()
-    )
+  theme(strip.background = element_blank(),
+        strip.text.x = element_blank())
 
 publisher_ta_prop_plot <- publisher_ta_prop |>
   ggplot(aes(gsub("^20", "'", as.character(cr_year)), prop)) +
-  geom_bar(stat = "identity", fill = "#56B4E9") +
-  scale_y_continuous(expand = expansion(mult = c(0, 0.05)), breaks = c(0, 0.25,0.5,0.75), limits = c(0, .75),
-                     labels = scales::percent) +
-  facet_wrap(~publisher, nrow = 1) +
+  geom_bar(stat = "identity",
+           fill = "#56B4E9",
+            color = "#000000",
+           linewidth = 0.15) +
+  scale_y_continuous(
+    expand = expansion(mult = c(0, 0.05)),
+    breaks = c(0, 0.25, 0.5, 0.75),
+    limits = c(0, .75),
+    labels = scales::percent
+  ) +
+  facet_wrap( ~ publisher, nrow = 1) +
   theme_minimal() +
   labs(y = "Percentage\nof Hybrid OA\nvia Agreement", x = NULL) +
   theme(
     axis.text.x = element_blank(),
     strip.background = element_blank(),
-    strip.text.x = element_blank())
+    strip.text.x = element_blank()
+  )
 ```
 
 ```{r publisher_summary_table}
@@ -660,14 +702,13 @@ subject_trend_plot <- top_level_by_year_oa |>
     fill = type,
     group = type
   )) +
-    geom_area(color = "white",
-            alpha = 0.8,
-            linewidth = 0.3) +
+    geom_area(color = "#000000",
+            linewidth = 0.15) +
   facet_wrap( ~ top_level, nrow = 1) +
   scale_fill_manual(
     "Hybrid OA",
     values = c(
-      no_ta_fractions = "#b3b3b3",
+      no_ta_fractions = "#b3b3b3a0",
       ta_oa_frac = "#56B4E9"
     ),
     labels = c(no_ta_fractions = "Other", ta_oa_frac = "Agreement"),
@@ -691,7 +732,8 @@ subject_ta_trend_plot <- top_level_by_year_oa |>
   filter(!cr_year %in%  c("2017", "2023")) |>
   mutate(prop = ta_oa_frac / oa_frac) |>
   ggplot(aes(gsub("^20", "'", as.character(cr_year)), prop)) +
-  geom_bar(stat = "identity", fill = "#56B4E9") +
+  geom_bar(stat = "identity", fill = "#56B4E9", color = "#000000",
+            linewidth = 0.15) +
   scale_y_continuous(expand = expansion(mult = c(0, 0.05)), breaks = c(0, 0.25,0.5,0.75), limits = c(0, .75),
                      labels = scales::percent) +
   facet_wrap(~top_level, nrow = 1) +
@@ -812,7 +854,6 @@ facet_labels <- country_multiple_df |>
   summarise(total = sum(all_total)) |>
   mutate(prop = total / sum(total)) |>
   ungroup() |>
-  # Highlight Germany
   mutate(total_string = case_when(
     total < 1000 ~ as.character(total),
     total < 1000000 ~ paste0(format(round(total / 1e3, 1), trim = TRUE), "K"),
@@ -820,7 +861,7 @@ facet_labels <- country_multiple_df |>
   )) |>
   mutate(
     facet_labels = glue::glue(
-      '{country_name_fct}<br>
+      '**{country_name_fct}**<br>
       {total_string} | {paste(round(prop * 100, 1), "%")}'
     )
   ) |>
@@ -846,13 +887,12 @@ ggplot(top_20_plot_df, aes(
     group = type,
     fill = type
   )) +
-  geom_area(color = "white",
-            alpha = 0.8,
-            linewidth = 0.3,
+  geom_area(color = "#000000",
+            linewidth = 0.15,
             stat = "identity") +
 scale_fill_manual(
     "Hybrid OA",
-    values = c(no_ta = "#b3b3b3", ta_oa = "#56B4E9"),
+    values = c(no_ta = "#b3b3b3a0", ta_oa = "#56B4E9"),
     labels = c(no_ta = "Other", ta_oa = "Agreement"),
     guide = guide_legend(reverse = TRUE)
   ) +
@@ -874,7 +914,7 @@ scale_fill_manual(
     panel.grid.minor = element_blank(),
                 panel.border = element_rect(color = "grey50", fill = NA),
     axis.title=element_text(size = 10),
-    strip.text = ggtext::element_markdown(size = 6),
+    strip.text = ggtext::element_markdown(size = 5.5),
     plot.subtitle = ggtext::element_markdown(hjust = 0.5),
     panel.spacing = unit(1, "lines")
   )
@@ -922,10 +962,10 @@ top_20_plot <- top_20_df |>
   values_to = "value",
   names_to = "type") |>
   ggplot(aes(reorder(as.character(country_code),  value), value / sum(value), fill = type)) +
-    geom_bar(stat = "identity", alpha = 0.8, color = "#000000", linewidth = 0.2) +
+    geom_bar(stat = "identity", color = "#000000", linewidth = 0.15) +
    scale_fill_manual(
     NULL,
-    values = c(no_ta = "#b3b3b3", ta_oa = "#56B4E9"),
+    values = c(no_ta = "#b3b3b3a0", ta_oa = "#56B4E9"),
     labels = c(no_ta = "Other", ta_oa = "Agreement"),
     guide = FALSE) +
   coord_flip() +
@@ -942,29 +982,27 @@ top_20_plot <- top_20_df |>
 
 ```{r}
 country_scatter_22 <- country_scatter_df |>
-  filter(cr_year == "2022", !is.na(country_code)) |>
+  filter(cr_year == "2022", !is.na(country_code), all > 10000) |>
   ggplot(aes(all, oa)) +
   geom_point(aes(fill = cat, size = ta_oa), pch = 21, alpha = 0.7) +
-  scale_fill_manual(NULL, values = c("OECD" = "#3fc1c9", "BRICS" = "#fc5185", "Other" = "#e1e1e1")) +
+  scale_fill_manual(NULL, values = c("OECD" = "#d01c8b", "BRICS" = "#4dac26", "Other" = "#f7f7f7")) +
   geom_smooth(aes(all, oa), method=lm) +
-  scale_size("TA OA", guide = "none") +
+  scale_size("Agreement", guide = FALSE) +
   ggrepel::geom_text_repel(
-    data = filter(country_scatter_df, cr_year == 2022, cat %in% c("OECD", "BRICS"), ta_oa > 5000 | country_code %in% c("CN", "IN")),
+    data = filter(country_scatter_df, cr_year == 2022, ta_oa > 5000 | country_code %in% c("CN", "IN", "BR", "RU", "IR")),
     aes(x = all, y = oa, label = country_code),
+            min.segment.length = .15,
     force = 5,
-    segment.color = "grey30",
-    segment.size = 0.2,
+    segment.color = "grey10",
+    segment.size = 0.5,
     segment.alpha = 0.8,
     color = "grey10", 
     size = 3,
     box.padding = 0.3) +
-  scale_x_continuous(labels =  scales::number_format(big.mark = ","), guide = guide_axis(angle = 45)) +
-  scale_y_continuous(labels =  scales::number_format(big.mark = ",")) +
+  scale_y_log10(labels =  scales::number_format(big.mark = ",")) +
+  scale_x_log10(labels =  scales::number_format(big.mark = ",")) +
   theme_minimal() +
-  labs(x = "Total articles in hybrid journals in 2022", y = "OA articles") +
-  theme(legend.position = "top",
-    legend.justification = "left",
-    legend.direction = "horizontal")
+  labs(x = "Total articles in hybrid journals in 2022", y = "OA articles") 
 
 oecd_stats <- readr::read_csv(here::here("data", "oecd_stats.csv"))
 oecd_stats_df <- oecd_stats |>
@@ -977,17 +1015,15 @@ oecd_stats_df <- oecd_stats |>
   pivot_longer(cols = c(ta_oa, oa_other, closed), names_to = "oa_type") |>
   mutate(cat = ifelse(is.na(cat), "Other", cat))
 
-country_bar <- ggplot(oecd_stats_df, aes(gsub("^20", "'", as.character(cr_year)), value, group = oa_type, fill = oa_type, color = oa_type)) +
+country_bar <- ggplot(oecd_stats_df, aes(gsub("^20", "'", as.character(cr_year)), value, group = oa_type, fill = oa_type)) +
   geom_area(color = "#000000",
-            alpha = 0.8,
-            linewidth = 0.2) +
-  scale_color_manual(values = colorspace::darken(c(oa_other = "#b3b3b3", ta_oa = "#56B4E9", closed = "#e1e1e1"), 0.3)) +
+            linewidth = 0.15) +
   scale_y_continuous(expand = expansion(mult = c(0, 0.05)), labels =  scales::number_format(big.mark = ",")) +
   facet_wrap(~ cat) +
-  scale_fill_manual("Hybrid OA", values = c(oa_other = "#b3b3b3", ta_oa = "#56B4E9", closed = "#e1e1e1"),
+  scale_fill_manual("Hybrid OA", values = c(oa_other = "#b3b3b3a0", ta_oa = "#56B4E9", closed = "#e1e1e1a0"),
                     labels = c(oa_other = "Other", ta_oa = "Agreement", closed = "NA"),  guide = guide_legend(reverse = TRUE)) +
   theme_minimal() +
-  labs(x = "Publication year", y = "Total articles") 
+  labs(x = "Publication year", y = "Total articles")
 
 ```
 
@@ -1000,7 +1036,7 @@ wrap_plots(
   design = "
   AC
   BC",
-#  guides = "collect",
+ # guides = "collect",
   widths = c(0.7, 0.3),
   heights = c(0.5,0.5)
 ) &
@@ -1008,9 +1044,8 @@ wrap_plots(
     panel.grid.minor = element_blank(),
                 panel.border = element_rect(color = "grey50", fill = NA),
     axis.title=element_text(size = 10),
-    legend.position = "top",
-    legend.justification = "left",
-    legend.direction = "horizontal") &
+    legend.position = "top", 
+    legend.justification = "right") &
     plot_annotation(tag_levels = 'A') 
 ```
 
